--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - ./frontend:/app/frontend
       - ./db:/app/db
     command: python3 app.py
+    depends_on:
+      - elasticsearch
 
   elasticsearch:
     container_name: elasticsearch
@@ -34,6 +36,11 @@ services:
       - "9200:9200"
     volumes:
       - es-data:/usr/share/elasticsearch/data
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
+      interval: 5s
+      timeout: 10s
+      retries: 10
 
 volumes:
   es-data:
